--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
+            rel="stylesheet"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Todo app by a03z</title>
     </head>
